--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -1,11 +1,34 @@
 <div class="homepage">
 
-  <div class="container">
+  <div class="container spacing-bottom-small">
     <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
   </div>
 
-  <div class="container">
-    <div class="text-center"><h1>Slider to go here</h1></div>
+  <div class="container main-carousel-container">
+    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#main-carousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="slider-item item active">
+          <img class="img-responsive" src="/img/slider1.jpg" alt="">
+          <div class="carousel-caption">
+            <h2>Security Talk</h2>
+            <p>Perl Dancer Conference 2014</p>
+          </div>
+        </div>
+        <div class="slider-item item">
+          <img class="img-responsive" src="/img/slider2.jpg" alt="">
+          <div class="carousel-caption">
+            <h2>Modern Tech ;-)</h2>
+            <p>Perl Dancer Conference 2014</p>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
+      <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+    </div>
   </div>
 
   <div class="container">
