--- a/PerlDance/views/login.html
+++ b/PerlDance/views/login.html
@@ -18,13 +18,13 @@
             <div class="form-group">
               <label for="emailInput" class="col-sm-3 control-label">Email</label>
               <div class="col-sm-9">
-                <input type="email" class="form-control" id="emailInput" placeholder="Email" name="username">
+                <input type="email" class="form-control" id="emailInput" required placeholder="Email" name="username">
               </div>
             </div>
             <div class="form-group">
               <label for="emailPassword" class="col-sm-3 control-label">Password</label>
               <div class="col-sm-9">
-                <input type="email" class="form-control" id="emailPassword" placeholder="Password" name="password">
+                <input type="password" class="form-control" id="emailPassword" required placeholder="Password" name="password">
               </div>
             </div>
             <div class="text-right">
