slow down slider slightly

--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="container main-carousel-container">
-    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+    <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="7500">
       <ol class="carousel-indicators">
         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#main-carousel" data-slide-to="1"></li>
