basic registration email added along with email layout updates

--- a/PerlDance/views/layouts/email.html
+++ b/PerlDance/views/layouts/email.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title class="title">Perl Dancer Conference 2015</title>
+    <style type="text/css" media="all">
+      body {
+        background-color:#ddd;
+        font-family:Helvetica Neue, Helvetica, Arial, sans-serif;
+        color:#666;
+        margin:0 auto;
+        padding:0;
+      }
+      table {
+        width:85%;
+        border-collapse:collapse;
+        background-color:#fff;
+      }
+      td, th {
+        padding:10px;
+      }
+      tbody {
+      }
+      thead {
+        border-bottom:#000 solid 10px;
+      }
+      tfoot {
+        background-color:#ddd;
+        text-align:center;
+        font-size:80%;
+      }
+      a {
+        text-decoration:none;
+        color:#0088cc;
+      }
+    </style>
   </head>
   <body>
-    <table>
-      <div class="content"></div>
+    <table align="center">
+      <thead>
+        <tr>
+          <td><img class="conference-logo" src="/img/perl-dancer-2015-email.jpg"></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="content"></td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td class="footer">
+            The Perl Dancer Conference 2015 is presented by the
+            <a href="http://www.perldancer.org/">Perl Dancer community</a> and
+            the <a href="http://www.icdevgroup.org/">Interchange Development Group</a>.
+          </td>
+      </tfoot>
     </table>
   </body>
 </html>
