small css change for email layout

--- a/PerlDance/views/layouts/email.html
+++ b/PerlDance/views/layouts/email.html
@@ -13,6 +13,7 @@
         width:85%;
         border-collapse:collapse;
         background-color:#fff;
+        margin-top:10px;
       }
       td, th {
         padding:10px;
