add generic email template+spec

--- a/PerlDance/views/layouts/email.xml
+++ b/PerlDance/views/layouts/email.xml
@@ -1,3 +1,4 @@
 <specification>
   <value name="content" class="content" op="hook"/>
+  <value name="conference-logo" target="src"/>
 </specification>
