replace slider images

--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -9,19 +9,35 @@
       <ol class="carousel-indicators">
         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#main-carousel" data-slide-to="1"></li>
+        <li data-target="#main-carousel" data-slide-to="2"></li>
+        <li data-target="#main-carousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="slider-item item active">
-          <img class="img-responsive" src="/img/slider1.jpg" alt="">
+          <img class="img-responsive" src="/img/perldance-2014-sawyerx.jpg" alt="">
+          <div class="carousel-caption">
+            <h2>SawyerX Talk</h2>
+            <p>Perl Dancer Conference 2014</p>
+          </div>
+        </div>
+        <div class="slider-item item">
+          <img class="img-responsive" src="/img/perldance-2014-modern-tech.jpg" alt="">
+          <div class="carousel-caption">
+            <h2>Modern Tech ;-)</h2>
+            <p>Perl Dancer Conference 2014</p>
+          </div>
+        </div>
+        <div class="slider-item item">
+          <img class="img-responsive" src="/img/perldance-2014-security.jpg" alt="">
           <div class="carousel-caption">
             <h2>Security Talk</h2>
             <p>Perl Dancer Conference 2014</p>
           </div>
         </div>
         <div class="slider-item item">
-          <img class="img-responsive" src="/img/slider2.jpg" alt="">
+          <img class="img-responsive" src="/img/perldance-2014-organisers.jpg" alt="">
           <div class="carousel-caption">
-            <h2>Modern Tech ;-)</h2>
+            <h2>The Organisers</h2>
             <p>Perl Dancer Conference 2014</p>
           </div>
         </div>
