--- a/PerlDance/views/bad_token.html
+++ b/PerlDance/views/bad_token.html
@@ -6,55 +6,14 @@
 </div>  
 
 <div class="container">
-  <div class="row">
-
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Login
-        </div>
-        <div class="panel-body">
-          <form class="form-horizontal" action="/login" method="post">
-            <div class="form-group">
-              <label for="emailInput" class="col-sm-3 control-label">Email</label>
-              <div class="col-sm-9">
-                <input type="email" class="form-control" id="emailInput" required placeholder="Email" name="username">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="emailPassword" class="col-sm-3 control-label">Password</label>
-              <div class="col-sm-9">
-                <input type="password" class="form-control" id="emailPassword" required placeholder="Password" name="password">
-              </div>
-            </div>
-            <div class="text-right">
-              <button class="btn btn-primary" type="submit">Submit</button>
-            </div>
-          </form>
-        </div>
+  <div class="center-block">
+    <h2 class="text-center action_name">Do something</h2>
+    <div class="text text-center">Some text about what is going on.</div>
+    <form class="text-center form-inline form" method="post" action="/register">
+      <div class="form-group">
+        <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
+        <input class="btn btn-primary submit" type="submit" value="Submit">
       </div>
-    </div>
-
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Register or Reset Password
-        </div>
-        <div class="panel-body">
-          <form class="form-horizontal" action="/register" method="post">
-            <div class="form-group">
-              <label for="emailInput" class="col-sm-3 control-label">Email</label>
-              <div class="col-sm-9">
-                <input type="email" class="form-control" id="emailInput" placeholder="Email" name="username">
-              </div>
-            </div>
-            <div class="text-right">
-              <button class="btn btn-primary" type="submit">Submit</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
+    </form>
   </div>
 </div>
