--- a/PerlDance/views/bad_token.xml
+++ b/PerlDance/views/bad_token.xml
@@ -1,4 +1,9 @@
 <specification>
   <value name="title" class="page-title"/>
   <value name="description" class="page-caption"/>
+  <value name="action" class="form" target="action"/>
+  <value name="action_name"/>
+  <value name="text" filter="markdown" op="hook"/>
+  <value name="action_name" class="submit" target="value"/>
+
 </specification>
