registration working now need to add user profile management

--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container register-container">
     <div class="center-block">
       <h1 class="text-center subscribe">Register now!</h1>
       <form class="text-center form-inline" method="post" action="/register">
