more work on reset_password and register

--- a/PerlDance/views/login.xml
+++ b/PerlDance/views/login.xml
@@ -1,4 +1,9 @@
 <specification>
   <value name="title" class="page-title"/>
   <value name="description" class="page-caption"/>
+  <value name="login_input" field="login_input"
+    target="class" op="append" joiner=" "/>
+  <value name="login_error"/>
+  <value name="username" field="params.username" target="value"/>
+  <value name="register" field="params.register" target="value"/>
 </specification>
