start adding markup for nav submenus

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -42,11 +42,24 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="menu-main"><a class="link" href="/">Home</a></li>
-            <li class="menu-main"><a class="link" href="/">About</a></li>
-            <li class="menu-main"><a class="link" href="/">Contact</a></li>
-            <li class="menu-login"><a class="link" href="/">Login</a></li>
-            <li class="menu-logout"><a class="link" href="/">Logout</a></li>
+            <li class="menu-main">
+              <a class="link" href="/">Home</a>
+              <ul class="dropdown-menu">
+                <li class="child-menu"><a class="link" href="/">Submenu</a></li>
+              </ul>
+            </li>
+            <li class="menu-login">
+              <a class="link" href="/">Login</a>
+              <ul class="dropdown-menu">
+                <li class="child-menu"><a class="link" href="/">Submenu</a></li>
+              </ul>
+            </li>
+            <li class="menu-logout">
+              <a class="link" href="/">Logout</a>
+              <ul class="dropdown-menu">
+                <li class="child-menu"><a class="link" href="/">Submenu</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
