--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -45,19 +45,19 @@
             <li class="menu-main">
               <a class="link" href="/">Home</a>
               <ul class="dropdown-menu">
-                <li class="child-menu"><a class="link" href="/">Submenu</a></li>
+                <li class="menu-main-child"><a class="link" href="/">Submenu</a></li>
               </ul>
             </li>
             <li class="menu-login">
               <a class="link" href="/">Login</a>
               <ul class="dropdown-menu">
-                <li class="child-menu"><a class="link" href="/">Submenu</a></li>
+                <li class="menu-login-child"><a class="link" href="/">Submenu</a></li>
               </ul>
             </li>
             <li class="menu-logout">
               <a class="link" href="/">Logout</a>
               <ul class="dropdown-menu">
-                <li class="child-menu"><a class="link" href="/">Submenu</a></li>
+                <li class="menu-logout-child"><a class="link" href="/">Submenu</a></li>
               </ul>
             </li>
           </ul>
