--- a/PerlDance/views/layouts/main.xml
+++ b/PerlDance/views/layouts/main.xml
@@ -8,7 +8,7 @@
   <list name="menu-login" iterator="nav-top-login">
     <param name="name" class="link"/>
     <param name="uri" class="link" target="href" op="append"/>
-    <list name="child-menu" iterator="children">
+    <list name="menu-login-child" iterator="children">
       <param name="name" class="link"/>
       <param name="uri" class="link" target="href" op="append"/>
     </list>
@@ -16,7 +16,7 @@
   <list name="menu-logout" iterator="nav-top-logout">
     <param name="name" class="link"/>
     <param name="uri" class="link" target="href" op="append"/>
-    <list name="child-menu" iterator="children">
+    <list name="menu-logout-child" iterator="children">
       <param name="name" class="link"/>
       <param name="uri" class="link" target="href" op="append"/>
     </list>
@@ -25,7 +25,7 @@
     <param name="name" class="link"/>
     <param name="uri" class="link" target="href" op="append"/>
     <param name="class" class="link" target="class"/>
-    <list name="child-menu" iterator="children">
+    <list name="menu-main-child" iterator="children">
       <param name="name" class="link"/>
       <param name="uri" class="link" target="href" op="append"/>
     </list>
