add route for /talks/tag/<tagname>
This is a really simple route which puts tag in a var and forwards to
/talks and in there the var is checked and add to the search if defined.
Templates updated with 'with tag: foo' for when it is defined.

--- a/PerlDance/views/talks.xml
+++ b/PerlDance/views/talks.xml
@@ -1,4 +1,6 @@
 <specification>
+  <container name="has_tag" value="tag"/>
+  <value name="tag"/>
   <value name="title" class="page-title"/>
   <value name="description" class="page-caption"/>
   <value name="talks_submitted"/>
