--- a/PerlDance/views/talks.html
+++ b/PerlDance/views/talks.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">List of talks</h3>
+      <h3 class="panel-title">List of talks<span class="has_tag"> with tag: <span class="tag">tag</span></span></h3>
       <div class="text-center">Submitted talks: <span class="talks_submitted">0</span></div>
       <div class="text-center">Accepted talks: <span class="talks_accepted">0</span></div>
     </div>
