improve head title handling and add meta description

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title class="title">Perl Dancer Conference 2015 | </title>
+    <title class="head-title">Conference Name | Page Title</title>
+    <meta class="meta-description" name="description" content="Conference Name. Page description">
     
     <!--link rel="pingback" href="/xmlrpc.php" /-->
     <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
