--- a/PerlDance/views/cfp.html
+++ b/PerlDance/views/cfp.html
@@ -1,28 +1,26 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal" data-bgspeed="0.5">
-  <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container" >
-    <h1 class="gdlr-page-title">Call For Papers</h1>
-    <span class="gdlr-page-caption">Requirement and guidance for submitting papers</span>
-  </div>  
-</div>  
+<div class="jumbotron title-wrapper">
+  <div class="container">
+    <h1 class="page-title">nav title</h1>
+    <span class="page-caption">nav description</span>
+  </div>
+</div>
 
-<div class="content-wrapper">
-  <div class="gdlr-content">
-    <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
-      <section id="content-section-1">
-        <div class="color-wrapper-cfp gdlr-color-wrapper gdlr-show-all gdlr-skin-stunning-text">
-          <div class="container">
-            <div class="eight columns">
-              <div class="gdlr-stunning-text-ux gdlr-ux">
-                <div class="margin-bottom-30 gdlr-item gdlr-stunning-text-item type-normal">
-                  <h2 class="stunning-text-title">Ready To Submit Your Paper?</h2>
-                  <div class="stunning-text-caption gdlr-skin-content">
-                    <p>All full paper submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
-                    <p>It's enough to submit a short abstract, duration and title before conference.</p>
-                    <p>Abstract should be max 200 words and duration can be 20 or 40 minutes.</p>
-                  </div>
-                </div>
-              </div>
+<div class="container">
+  <h2 class="stunning-text-title">Ready To Submit Your Talk?</h2>
+  <div>
+    <p>All talk submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
+    <p>It's enough to submit a short abstract, duration and title before conference.</p>
+    <p>Abstract should be max 200 words and duration can be 20 or 40 minutes.</p>
+  </div>
+</div>
+
+<div class="container login-required">
+  <h2>Login required</h2>
+  <p>You must be logged in to submit a talk.</p>
+  <div class="login-fragment"></div>
+</div>
+
+<div class="container logged-in">
               <div class="gdlr-item gdlr-content-item" >
                 <div role="form" class="wpcf7" id="wpcf7-f3360-o1" lang="en-US" dir="ltr">
                   <div class="screen-reader-response"></div>
