--- a/PerlDance/views/cfp.xml
+++ b/PerlDance/views/cfp.xml
@@ -1,2 +1,8 @@
 <specification>
+  <value name="title" class="page-title"/>
+  <value name="description" class="page-caption"/>
+  <container name="login-required" value="!logged_in_user">
+    <value name="login-fragment" op="hook" include="fragments/login.html"/>
+  </container>
+  <container name="logged-in" value="logged_in_user"/>
 </specification>
