--- a/PerlDance/views/login.xml
+++ b/PerlDance/views/login.xml
@@ -1,9 +1,5 @@
 <specification>
   <value name="title" class="page-title"/>
   <value name="description" class="page-caption"/>
-  <value name="login_input" field="login_input"
-    target="class" op="append" joiner=" "/>
-  <value name="login_error"/>
-  <value name="username" field="params.username" target="value"/>
-  <value name="register" field="params.register" target="value"/>
+  <value name="login-fragment" op="hook" include="fragments/login.html"/>
 </specification>
