--- a/PerlDance/views/cfp.html
+++ b/PerlDance/views/cfp.html
@@ -6,11 +6,13 @@
 </div>
 
 <div class="container">
+  <div class="well">
   <h2 class="stunning-text-title">Ready To Submit Your Talk?</h2>
   <div>
     <p>All talk submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
     <p>It's enough to submit a short abstract, duration and title before conference.</p>
     <p>Abstract should be max 200 words and duration can be 20 or 40 minutes.</p>
+  </div>
   </div>
 </div>
 
@@ -21,56 +23,52 @@
 </div>
 
 <div class="container logged-in">
-              <div class="gdlr-item gdlr-content-item" >
-                <div role="form" class="wpcf7" id="wpcf7-f3360-o1" lang="en-US" dir="ltr">
-                  <div class="screen-reader-response"></div>
-                  <form name="" action="/?page_id=3344#wpcf7-f3360-o1" method="post" class="wpcf7-form" novalidate="novalidate">
-                    <div class="display-none">
-                      <input type="hidden" name="_wpcf7" value="3360" />
-                      <input type="hidden" name="_wpcf7_version" value="4.1.2" />
-                      <input type="hidden" name="_wpcf7_locale" value="en_US" />
-                      <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f3360-o1" />
-                      <input type="hidden" name="_wpnonce" value="634c55d70a" />
-                    </div>
-                    <p>Your Name (required)<br />
-                      <span class="wpcf7-form-control-wrap your-name">
-                        <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" />
-                      </span>
-                    </p>
-                    <p>Your Email (required)<br />
-                      <span class="wpcf7-form-control-wrap your-email">
-                        <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" />
-                      </span>
-                    </p>
-                    <p>Talk title<br />
-                      <span class="wpcf7-form-control-wrap your-subject">
-                        <input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" />
-                      </span>
-                    </p>
-                    <p>Abstract (up to 200 words)<br />
-                      <span class="wpcf7-form-control-wrap your-message">
-                        <textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"></textarea>
-                      </span>
-                    </p>
-                    <p><input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" /></p>
-                    <div class="wpcf7-response-output wpcf7-display-none"></div>
-                  </form>
-                </div>
-              </div>
-            </div>
-            <div class="four columns" >
-              <div class="gdlr-image-frame-item gdlr-item"  >
-                <div class="gdlr-frame frame-type-none"  >
-                  <div class="gdlr-image-link-shortcode" ></div>
-                </div>
-              </div>
-            </div>
-            <div class="clear"></div>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <form class="form-horizontal" method="post">
+
+        <div class="form-group talk_title_input">
+          <label for="inputTitle" class="col-sm-2 control-label">Title</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control talk_title" id="inputTitle" name="talk_title" required placeholder="Talk title">
+            <div class="help-block talk_title_error"></div>
           </div>
         </div>
-        <div class="clear"></div>
-      </section>
+
+        <div class="form-group abstract_input">
+          <label for="inputAbstract" class="col-sm-2 control-label">Abstract</label>
+          <div class="col-sm-10">
+            <textarea rows="4" class="form-control abstract" id="inputAbstract" name="abstract" required placeholder="Talk abstract (max 200 words)"></textarea>
+            <div class="help-block abstract_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group tags_input">
+          <label for="inputTags" class="col-sm-2 control-label">Tags</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control tags" id="inputTags" name="tags" required placeholder="Tags, e.g.: Dancer DBIx::Class git">
+            <div class="help-block tags_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group duration_input">
+          <label for="inputDuration" class="col-sm-2 control-label">Duration</label>
+          <div class="col-sm-10">
+            <select class="form-control duration" id="inputDuration" name="duration" required placeholder="Talk duration">
+              <option>10 mins</option>
+              <option>20 mins</option>
+            </select>
+            <div class="help-block duration_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+
+      </div>
     </div>
-  </div>
-  <div class="clear" ></div>
+  </form>
 </div>
