--- a/PerlDance/views/talk.html
+++ b/PerlDance/views/talk.html
@@ -17,7 +17,7 @@
         <div>
           <i class="fa fa-clock-o"></i> <span class="duration_display">09:00 - 13:00</span>
         </div>
-        <div>
+        <div class="session-location">
           <i class="fa fa-location-arrow"></i> <span class="location">Location</span>
         </div>
         <div>
