for now tickets are 'register now' instead of 'book now'

--- a/PerlDance/views/fragments/tickets.html
+++ b/PerlDance/views/fragments/tickets.html
@@ -8,7 +8,8 @@
       <div class="description ticket-content">Ticket description</div>
       <form action="/cart" method="post">
         <input type="hidden" class="sku" name="sku">
-        <button type="submit" class="btn btn-primary">Book Now</button>
+        <!--button type="submit" class="btn btn-primary">Book Now</button-->
+        <a href="/register" class="btn btn-primary">Register Now</a>
       </form>
     </div>
   </div>
