put speakers back on homepage

--- a/views/index.html
+++ b/views/index.html
@@ -55,6 +55,10 @@
     </div>
   </div>
 
+  <div class="container speaker-item-wrapper">
+    <!-- fragments/speakers.html -->
+  </div>
+
   <div class="container text-center">
     <h1>What people say about our conference</h1>
     <div class="row">
