add back missing "Speakers" h1 on homepage

--- a/views/index.html
+++ b/views/index.html
@@ -55,8 +55,11 @@
     </div>
   </div>
 
-  <div class="container speaker-item-wrapper">
-    <!-- fragments/speakers.html -->
+  <div class="container">
+    <h1 class="text-center subscribe">Speakers</h1>
+    <div class="speaker-item-wrapper">
+      <!-- fragments/speakers.html -->
+    </div>
   </div>
 
   <div class="container text-center">
