--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -79,6 +79,7 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src='/js/bootstrap-hover-dropdown.min.js'></script>
     <script src='/js/site.js'></script>
     <div class='extra-js'><script class='src' src=''></script></div>
   </body>
