fix Jure's name in homepage testimonals

--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
       <div class="col-md-4">
         <blockquote>
           <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
-          <footer>Jure Kodzoma <cite>Informa Studio</cite></footer>
+          <footer>Jure Kodžoman <cite>Informa Studio</cite></footer>
         </blockquote>
       </div>
       <div class="col-md-4">
