fix Jure's name in populate + add profile submenus

--- a/views/profile.html
+++ b/views/profile.html
@@ -4,3 +4,18 @@
     <span class="page-caption">nav description</span>
   </div>
 </div>  
+
+<div class="container">
+  <h2>Update Profile</h2>
+  This is your personal page. From here you can manage everything regarding your participation in <span class="conference_name">Conference Name</span>.
+  <p>You can:</p>
+  <ul class="update-profile">
+    <li class="profile"><a class="link">Update your information</a></li>
+  </ul>
+  <p>View/edit your talks (accepted talks are shown in <b>bold</b> type):</p>
+  <ul class="talks">
+    <li class="talk"><a class="talk-link">Talk title</a></li>
+  </ul>
+  <p><a href="/talks/submit">Submit a talk</a></p>
+  <p><a href="/logout">Logout</a></p>
+</div>
