move title banner with photo background into layout/main

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -66,6 +66,13 @@
       </div>
     </div>
 
+    <div class="jumbotron title-wrapper">
+      <div class="container">
+      <h1 class="page-title">Some title</h1>
+      <span class="page-caption">caption goes here</span>
+      </div>
+    </div>
+
     <div class="content"></div>
     
     <div class="footer">
