--- a/views/profile.html
+++ b/views/profile.html
@@ -1,20 +1,13 @@
-<div class="jumbotron title-wrapper">
-  <div class="container">
-    <h1 class="page-title">nav title</h1>
-    <span class="page-caption">nav description</span>
-  </div>
-</div>  
-
 <div class="container">
   <h2>Update Profile</h2>
   This is your personal page. From here you can manage everything regarding your participation in <span class="conference_name">Conference Name</span>.
   <p>You can:</p>
   <ul class="update-profile">
-    <li class="profile"><a class="link">Update your information</a></li>
+    <li class="profile"><a class="link" href="/">Update your information</a></li>
   </ul>
-  <p>View/edit your talks (accepted talks are shown in <b>bold</b> type):</p>
+  <p>View/edit your talks <!--(accepted talks are shown in <b>bold</b> type)-->:</p>
   <ul class="talks">
-    <li class="talk"><a class="talk-link">Talk title</a></li>
+    <li class="talk"><a class="talk-link" href="/">Talk title</a></li>
   </ul>
   <p><a href="/talks/submit">Submit a talk</a></p>
   <p><a href="/logout">Logout</a></p>
