add krajee's fileinput plugin js+css
http://plugins.krajee.com/file-input

--- a/views/profile.html
+++ b/views/profile.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <h2>Update Profile</h2>
-  This is your personal page. From here you can manage everything regarding your participation in <span class="conference_name">Conference Name</span>.
+  <div class="jumbotron">
+  <p>This is your personal page. From here you can manage everything regarding your participation in <span class="conference_name">Conference Name</span>.</p>
   <p>You can:</p>
   <ul class="update-profile">
     <li class="profile"><a class="link" href="/">Update your information</a></li>
@@ -11,4 +11,5 @@
   </ul>
   <p><a href="/talks/submit">Submit a talk</a></p>
   <p><a href="/logout">Logout</a></p>
+</div>
 </div>
