start on profile photo upload

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -17,6 +17,7 @@
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Droid+Serif%3Aregular%2Citalic%2C700%2C700italic&#038;subset=latin&#038' type='text/css'>
     <link rel='stylesheet' href='/css/google-map.css' type='text/css'>
     <link rel='stylesheet' href='/css/font-awesome.min.css' type='text/css'>
+    <link rel='stylesheet' href='/css/fileinput.min.css' type='text/css'>
     <link rel='stylesheet' href='/css/site.css' type='text/css'>
     <!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
     <!--link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://perl.dance/wp-includes/wlwmanifest.xml" /--> 
