more work on profile photo management

--- a/views/profile/photo.html
+++ b/views/profile/photo.html
@@ -20,7 +20,7 @@
         <div class="panel-body">
           <form enctype="multipart/form-data" method="post">
             <div class="form-group">
-              <input id="photo-upload" name="photo" type="file" class="file" data-overwrite-initial="false">
+              <input id="photo-upload" name="photo" type="file" multiple class="file" accept="image/*">
             </div>
         </div>
       </div>
