--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -11,7 +11,7 @@
     <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
     <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Comments Feed" href="/?feed=comments-rss2" /-->
     <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Homepage &#8211; new Comments Feed" href="/?feed=rss2&#038;page_id=3522" /-->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900&#038;subset=latin&#038' type='text/css'>
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat%3Aregular%2C700&#038;subset=latin&#038' type='text/css'>
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Droid+Serif%3Aregular%2Citalic%2C700%2C700italic&#038;subset=latin&#038' type='text/css'>
@@ -84,9 +84,11 @@
       </div>
     </div>
 
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!--script src="//code.jquery.com/jquery-1.11.3.min.js"></script-->
+    <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="/js/fileinput.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src='/js/bootstrap-hover-dropdown.min.js'></script>
     <script src='/js/site.js'></script>
     <div class='extra-js'><script class='src' src=''></script></div>
