add jcrop css+js

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -18,6 +18,7 @@
     <link rel='stylesheet' href='/css/google-map.css' type='text/css'>
     <link rel='stylesheet' href='/css/font-awesome.min.css' type='text/css'>
     <link rel='stylesheet' href='/css/fileinput.min.css' type='text/css'>
+    <link rel='stylesheet' href='/css/jquery.Jcrop.min.css' type='text/css'>
     <link rel='stylesheet' href='/css/site.css' type='text/css'>
     <!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
     <!--link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://perl.dance/wp-includes/wlwmanifest.xml" /--> 
@@ -88,6 +89,7 @@
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="/js/fileinput.min.js"></script>
+    <script src="/js/jquery.Jcrop.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src='/js/bootstrap-hover-dropdown.min.js'></script>
     <script src='/js/site.js'></script>
