--- a/views/profile/photo.html
+++ b/views/profile/photo.html
@@ -31,6 +31,13 @@
         <div class="panel-body">
           <img id="new-photo" src="">
         </div>
+        <form action="/profile/photo/crop" method="post">
+          <input type="hidden" id="x" name="x">
+          <input type="hidden" id="y" name="y">
+          <input type="hidden" id="h" name="h">
+          <input type="hidden" id="w" name="w">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </form>
       </div>
     </div>
 
