--- a/views/index.html
+++ b/views/index.html
@@ -88,13 +88,23 @@
 
   <div class="container">
     <h1 class="text-center">Location</h1>
+
     <div class="location">
-      <div class="location-title">Training Venue - Amerikahaus</div>
+      <div class="location-title">Training Venue - Amerikahaus - 19/20 Oct</div>
       <div>
         <i class="fa fa-location-arrow"></i> <span class="location-address">2 Friedrich-Schmidt-Platz, 1010 Wien, Austria</span>
       </div>
       <div id="wgmpmap"></div>
     </div>
+
+    <div class="location">
+      <div class="location-title">Conference Venue - Hotel Schani Wien 21/22 Oct</div>
+      <div>
+        <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Wien, Austria</span>
+      </div>
+      <div id="confmap"></div>
+    </div>
+
   </div>
 
 </div>
