--- a/views/cfp.html
+++ b/views/cfp.html
@@ -5,6 +5,8 @@
     <p>All talk submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
     <p>It's enough to submit a short abstract, duration and title before conference.</p>
     <p>Abstract should be max 200 words and duration can be 20 or 40 minutes.</p>
+    <p>The submission deadline is August 31th, midnight CET. Talks are reviewed and possibly accepted as we receive them.
+    </p>
   </div>
   </div>
 </div>
