Drop requirement on tags from talk submission.

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -41,7 +41,7 @@
         <div class="form-group tags_input">
           <label for="inputTags" class="col-sm-2 control-label">Tags</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control tags" id="inputTags" name="tags" required placeholder="Tags, e.g.: Dancer DBIx::Class git">
+            <input type="text" class="form-control tags" id="inputTags" name="tags" placeholder="Tags, e.g.: Dancer DBIx::Class git">
             <div class="help-block tags_error"></div>
           </div>
         </div>
