Reduced call for papers text to the basics.

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -1,10 +1,13 @@
 <div class="container">
   <div class="well">
-  <h2 class="stunning-text-title">Ready To Submit Your Talk?</h2>
+  <h2 class="stunning-text-title">Call for Papers</h2>
   <div>
-    <p>All talk submissions will be peer reviewed and evaluated based on originality, technical and/or research content/depth, correctness, relevance to conference, contributions, and readability. English is the official language of the conference. We welcome paper submissions.</p>
-    <p>It's enough to submit a short abstract, duration and title before conference.</p>
-    <p>Abstract should be max 200 words and duration can be 20 or 40 minutes.</p>
+    <p>
+    We are now accepting proposals for talks in English or German. The preferred language is English due to our international guests.
+    </p>
+    <p>
+    Each presentation will last either 20 or 40 minutes after which there will be time for questions.
+    </p>
     <p>The submission deadline is August 31th, midnight CET. Talks are reviewed and possibly accepted as we receive them.
     </p>
   </div>
