Add "Suggested Topics" to Call for Papers view.

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -11,6 +11,28 @@
     <p>The submission deadline is August 31th, midnight CET. Talks are reviewed and possibly accepted as we receive them.
     </p>
   </div>
+  <h2 class="stunning-text-title">Suggested Topics</h2>
+  <div>
+    <p>
+    Talks may be on any topic related to Perl, Dancer or DBIx::Class in some way
+    or of general interest for IT people.
+    </p>
+    <p>
+    Possible topic areas include:
+    </p>
+    <ul>
+      <li>Modern Perl, Best Practices, Moo/Moose</li>
+      <li>Dancer (Applications, Plugins, Engines, Deployment</li>
+      <li>DBIx::Class (Schema, Components, Deployment)</li>
+      <li>Perl "Products" (WebGUI CMS, ...)</li>
+      <li>eCommerce (technical and business experiences).</li>
+      <li>Application security</li>
+    </ul>
+    <p>
+    Of course, we're happy to receive proposals for talks on other Perl /
+    Dancer related topics as well.
+    </p>
+  </div>    
   </div>
 </div>
 
