small typo fix in cfp view

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -22,7 +22,7 @@
     </p>
     <ul>
       <li>Modern Perl, Best Practices, Moo/Moose</li>
-      <li>Dancer (Applications, Plugins, Engines, Deployment</li>
+      <li>Dancer (Applications, Plugins, Engines, Deployment)</li>
       <li>DBIx::Class (Schema, Components, Deployment)</li>
       <li>Perl "Products" (WebGUI CMS, ...)</li>
       <li>eCommerce (technical and business experiences).</li>
