news crud methods and templates working but NO validation in place

--- a/views/admin/news.html
+++ b/views/admin/news.html
@@ -7,6 +7,9 @@
           <th>Title</th>
           <th>Public</th>
           <th>Created</th>
+          <th>Author</th>
+          <th>Edit</th>
+          <th>Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -14,6 +17,9 @@
           <td class="title">title</td>
           <td class="public">public</td>
           <td class="created">created</td>
+          <td class="author">author</td>
+          <td><a class="edit" href="/admin/news/edit/"><i class="fa fa-edit"></i></a></td>
+          <td><a class="delete" href="/admin/news/delete/"><i class="fa fa-trash"></i></a></td>
         </tr>
       </tbody>
     </table>
