--- a/views/admin/news/create_update.html
+++ b/views/admin/news/create_update.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="form-horizontal" method="post">
+  <form class="form-horizontal" method="post" name="update_create_news">
     <input type="hidden" name="messages_id">
 
     <div class="form-group">
@@ -13,10 +13,10 @@
       <label for="inputPublic" class="col-sm-2 control-label">Public</label>
       <div class="col-sm-10">
         <label class="radio-inline">
-          <input type="radio" name="public" value="1">Yes
+          <input type="radio" name="public" class="public" value="1">Yes
         </label>
         <label class="radio-inline">
-          <input type="radio" name="public" value="0">No
+          <input type="radio" name="public" class="public" value="0">No
         </label>
       </div>
     </div>
