homepage slider replaced by news items if there is any news

--- a/views/index.html
+++ b/views/index.html
@@ -43,6 +43,20 @@
     </div>
   </div>
 
+  <div class="container news-container">
+      <h2 class="text-center">News</h2>
+      <div class="panel panel-default news-item">
+        <div class="panel-heading">
+          <h4 class="row">
+            <div class="created text-muted col-sm-2">date</div>
+            <div class="title col-sm-10">title</div>
+          </h4>
+        </div>
+        <div class="panel-body content">
+        </div>
+      </div>
+  </div>
+
   <div class="container register-container">
     <div class="center-block">
       <h1 class="text-center subscribe">Register now!</h1>
